# bilbasen-fiat-panda-finder

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  conversation_log.md  debug_pagination.py  launch.bat  launch.py  package-lock.json  pre-commit-config.yaml  project_context.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.bat  setup.py  setup.sh  simple_pagination_test.py  test_condition_extraction.py  test_fixed_pagination.py  test_page2_listings.py
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/design-inspiration/: README.md
docs/design-inspiration/color-palettes/: .gitkeep
docs/design-inspiration/components/: .gitkeep
docs/design-inspiration/layouts/: .gitkeep
docs/design-inspiration/screenshots/: .gitkeep
src/app/: api.py  config.py  db.py  logging_conf.py  models.py  parse_condition.py  scoring.py  server.py
src/app/scraper/: json_extractor.py  playwright_client.py  scraper.py  selectors.py
src/app/scraper/fixtures/: www.bilbasen.dk_brugt_bil_fiat_panda_includeengroscvr_true_includeleasing_false_1754831506.html  www.bilbasen.dk_brugt_bil_fiat_panda_includeengroscvr_true_includeleasing_false_1754831690.html  www.bilbasen.dk_brugt_bil_fiat_panda_includeengroscvr_true_includeleasing_false_1754831815.html  www.bilbasen.dk_brugt_bil_fiat_panda_includeengroscvr_true_includeleasing_false_1754831865.html  www.bilbasen.dk_brugt_bil_fiat_panda_includeengroscvr_true_includeleasing_false_1754832230.html  www.bilbasen.dk_brugt_bil_fiat_panda_includeengroscvr_true_includeleasing_false_1754832345.html  www.bilbasen.dk_brugt_bil_fiat_panda_includeengroscvr_true_includeleasing_false_1754832398.html  www.bilbasen.dk_brugt_bil_fiat_panda_includeengroscvr_true_includeleasing_false_1754832424.html  www.bilbasen.dk_brugt_bil_fiat_panda_includeengroscvr_true_includeleasing_false_1754832781.html  www.bilbasen.dk_brugt_bil_fiat_panda_includeengroscvr_true_includeleasing_false_1754833355.html  www.bilbasen.dk_brugt_bil_fiat_panda_includeengroscvr_true_includeleasing_false_1754835461.html  www.bilbasen.dk_brugt_bil_fiat_panda_includeengroscvr_true_includeleasing_false_1754835722.html  www.bilbasen.dk_brugt_bil_fiat_panda_includeengroscvr_true_includeleasing_false_1754835767.html  www.bilbasen.dk_brugt_bil_fiat_panda_includeengroscvr_true_includeleasing_false_1754857970.html  www.bilbasen.dk_brugt_bil_fiat_panda_includeengroscvr_true_includeleasing_false_1754857976.html  www.bilbasen.dk_brugt_bil_fiat_panda_includeengroscvr_true_includeleasing_false_1754857982.html  www.bilbasen.dk_brugt_bil_fiat_panda_includeengroscvr_true_includeleasing_false_1754857991.html  www.bilbasen.dk_brugt_bil_fiat_panda_includeengroscvr_true_includeleasing_false_1754901642.html  www.bilbasen.dk_brugt_bil_fiat_panda_includeengroscvr_true_includeleasing_false_1754902073.html  www.bilbasen.dk_brugt_bil_fiat_panda_includeengroscvr_true_includeleasing_false_1754902102.html  www.bilbasen.dk_brugt_bil_fiat_panda_includeengroscvr_true_includeleasing_false_1754902273.html  www.bilbasen.dk_brugt_bil_fiat_panda_includeengroscvr_true_includeleasing_false_1754902308.html  www.bilbasen.dk_brugt_bil_fiat_panda_includeengroscvr_true_includeleasing_false_1754906197.html  www.bilbasen.dk_brugt_bil_fiat_panda_includeengroscvr_true_includeleasing_false_1754906272.html  www.bilbasen.dk_brugt_bil_fiat_panda_includeengroscvr_true_includeleasing_false_1754906285.html  www.bilbasen.dk_brugt_bil_fiat_panda_includeengroscvr_true_includeleasing_false_1754906289.html  www.bilbasen.dk_brugt_bil_peugeot_1007_1754831520.html  (+10 more)
tests/: conftest.py  test_api.py  test_condition.py  test_db.py  test_scoring.py  test_scraper.py
(+5 files in other folders)
