[project]
name = "bilbasen-fiat-panda-finder"
version = "0.1.0"
description = "A web scraper for finding the best Fiat Panda deals on Bilbasen.dk"
authors = [
    {name = "lveggers",email = "69449598+lveggers@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40.0",
    "pandas>=2.1.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.0",
    "plotly>=5.17.0",
    "sqlmodel>=0.0.14",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "selectolax>=0.3.0",
    "python-multipart>=0.0.6",
    "scipy (>=1.16.1,<2.0.0)"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "vcrpy>=5.1.0",
    "ruff>=0.1.0",
    "black>=23.9.0",
    "mypy>=1.6.0",
    "types-requests>=2.31.0",
    "pre-commit>=3.4.0"
]

[tool.poetry]
name = "bilbasen-fiat-panda-finder"
version = "0.1.0"
description = "A web scraper for finding the best Fiat Panda deals on Bilbasen.dk"
packages = [{include = "app", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
