[project]
name = "bilbasen-fiat-panda-finder"
version = "0.1.0"
description = "A web scraper for finding the best Fiat Panda deals on Bilbasen.dk"
authors = [
    {name = "lveggers",email = "69449598+lveggers@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40.0",
    "pandas>=2.1.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.0",
    "plotly>=5.17.0",
    "sqlmodel>=0.0.14",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "selectolax>=0.3.0",
    "python-multipart>=0.0.6",
    "scipy (>=1.16.1,<2.0.0)"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "vcrpy>=5.1.0",
    "ruff>=0.1.0",
    "black>=23.9.0",
    "mypy>=1.6.0",
    "types-requests>=2.31.0",
    "pre-commit>=3.4.0"
]

[tool.poetry]
name = "bilbasen-fiat-panda-finder"
version = "0.1.0"
description = "A web scraper for finding the best Fiat Panda deals on Bilbasen.dk"
authors = ["lveggers <69449598+lveggers@users.noreply.github.com>"]
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.40.0"
pandas = "^2.1.0"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
jinja2 = "^3.1.0"
plotly = "^5.17.0"
sqlmodel = "^0.0.14"
httpx = "^0.25.0"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.0.0"
selectolax = "^0.3.0"
python-multipart = "^0.0.6"
scipy = "^1.16.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
vcrpy = "^5.1.0"
ruff = "^0.1.0"
black = "^23.9.0"
mypy = "^1.6.0"
types-requests = "^2.31.0"
pandas-stubs = "^2.1.0"
scipy-stubs = "^1.11.0"
types-setuptools = "^69.0.0"
pre-commit = "^3.4.0"


[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
show_error_codes = true

# Ignore specific modules that have complex typing issues
[[tool.mypy.overrides]]
module = "src.app.db"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.app.scraper.selectors"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.app.api"
ignore_errors = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
